Use ANT to build this project.